commandToRunLocally - changed the look

--- a/index.html
+++ b/index.html
@@ -1911,7 +1911,7 @@
               <div className="selector">
                 {prefix}
                 {selectedNodeToDisplay.minimalCommandLine.map((command) => (
-                  <div key={command}>{command}</div>
+                  <span key={command}>{command} </span>
                 ))}
               </div>
             </div>
