--- a/index.html
+++ b/index.html
@@ -1908,12 +1908,12 @@
               <CopyToClipboard
                 getData={selectedNodeToDisplay.minimalCommandLine}
               />
-              <div className="selector">
+              <span className="selector">
                 {prefix}
                 {selectedNodeToDisplay.minimalCommandLine.map((command) => (
                   <span key={command}>{command} </span>
                 ))}
-              </div>
+              </span>
             </div>
           );
         }
