fixed issue with selection on moveMove event

--- a/index.html
+++ b/index.html
@@ -2164,6 +2164,7 @@
         };
 
         const onMouseMove = (e) => {
+          e.preventDefault();
           if (!separatorXPosition.current) {
             return;
           }
