Use different images

--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
             stackTrace:
               "at OcclusioncullingTests.RemoveCacheFolder_ShouldDelete_OcclusionFolder () [0x00034] in /Users/yan/unity/unity/Tests/EditModeAndPlayModeTests/Camera/Assets/Editor/OcclusionCullingTests.cs:27\n",
             artifacts: [
-              "images/nature1.jpg",
-              "images/nature2.jpg",
-              "images/nature3.jpeg",
+              "images/rendered.png",
+              "images/correct.png",
+              "images/diff.png",
             ],
             rootCause: true,
             minimalCommandLine: [
