--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="test_report.css" />
     <script type="text/javascript" src="data.json"></script>
     <title>Test Report</title>
@@ -37,7 +36,7 @@
         });
         const [checkBoxes, setCheckBoxes] = React.useState([]);
 
-        const prefix = testData[0].utrPrefix;
+        const prefix = testData[0].utrPrefix + " ";
 
         const getSelectedNode = (childNode) => {
           setState({ selectedNodeToDisplay: childNode });
